--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ body {
     height: 250px;
     border: 2px solid wheat;
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
 }
 
 .source p {
@@ -61,11 +63,13 @@ body {
     justify-content: center;
 }
 .source h1 {
-
+    font-size: 25px;
+    margin-top: 25px;
 }
 
 .source h2 {
-    
+    font-size: 25px;
+    margin-top: 35px;
 }
 
 .solution {
@@ -73,12 +77,25 @@ body {
     height: 250px;
     border: 2px solid wheat;
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.solution p {
+    font-size: 35px;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
 }
 
 .result {
+    font-size: 25px;
     width: 700px;
     height: 250px;
     border: 2px solid wheat;
     border-radius: 15px;
     margin-top: 30px;
+    color: white;
+    display: flex;
+    justify-content: center;
 }
