--- a/src/main.css
+++ b/src/main.css
@@ -19,9 +19,8 @@ body {
 
 .wrapper {
   min-height: 50vh;
-  width: 80vw;
+  width: 70vw;
   background-color: rgba(255, 255, 255, 0.8039215686);
-  padding-bottom: 20px;
   margin: 8rem auto;
   box-shadow: 0 0.5rem 2rem #716F81;
   border-radius: 1rem;
@@ -30,7 +29,8 @@ body {
 header {
   display: flex;
   align-items: center;
-  height: 4rem;
+  height: 5rem;
+  padding: 20px;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   background-color: #ffffff;
@@ -41,19 +41,22 @@ header p {
 
 .math {
   display: flex;
-  flex: 0 0 60%;
+  flex: 1 0 60%;
   justify-content: space-evenly;
   background-color: #E9D5DA;
 }
 
-.source h3 {
+.source h3,
+.solution h3 {
   text-align: center;
 }
-.source span {
+.source span,
+.solution span {
   width: 120px;
   text-align: center;
 }
-.source div {
+.source div,
+.solution div {
   display: flex;
   justify-content: space-around;
 }
