--- a/src/_base.scss
+++ b/src/_base.scss
@@ -21,7 +21,7 @@ html {
 body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.6;
-    font-size: 18px;
+    font-size: 20px;
     height: 100vh;
     color: $textGrey;
 
@@ -53,18 +53,35 @@ header {
 
 .math {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px 0px 20px 0px;
     flex: 1 0 60%;
     justify-content: space-evenly;
 
     input {
         background-color: #ffffffcd;
+        margin-bottom: 20px;
+        padding: 0px 10px 0px 10px;
+    }
+
+    .conversion-btn {
+        margin-left: 10px;
+        padding: 0px 10px 0px 10px;
+        border-radius: 1rem;
+    }
+
+    input,
+    label,
+    .btn-info {
+        margin-left: 20px;
+        font-size: 20px;
     }
 
 }
 
 .source,
 .solution {
-
     padding: 15px 0px 15px 0px;
 
     h3 {
