--- a/src/main.css
+++ b/src/main.css
@@ -12,7 +12,7 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   line-height: 1.6;
-  font-size: 18px;
+  font-size: 20px;
   height: 100vh;
   color: #2f3640;
   background-image: linear-gradient(to bottom right, #E9D5DA, #827397);
@@ -42,11 +42,27 @@ header p {
 
 .math {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px 0px 20px 0px;
   flex: 1 0 60%;
   justify-content: space-evenly;
 }
 .math input {
   background-color: rgba(255, 255, 255, 0.8039215686);
+  margin-bottom: 20px;
+  padding: 0px 10px 0px 10px;
+}
+.math .conversion-btn {
+  margin-left: 10px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 1rem;
+}
+.math input,
+.math label,
+.math .btn-info {
+  margin-left: 20px;
+  font-size: 20px;
 }
 
 .source,
