--- a/src/main.css
+++ b/src/main.css
@@ -40,6 +40,12 @@ header p {
   margin: 0;
 }
 
+.result {
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 10px 20px 10px 20px;
+}
+
 footer {
   text-align: center;
 }
