added link to new site

--- a/src/style.css
+++ b/src/style.css
@@ -102,4 +102,8 @@ footer {
   background-color: #f7eaed;
 }
 
+.blurb {
+  background-color: #eccb43;
+  padding: 10px;
+}
 /*# sourceMappingURL=main.css.map */
